--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,35 +10,36 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="26dp"
-        android:layout_marginEnd="136dp"
+        android:layout_marginEnd="150dp"
+        android:layout_marginStart="150dp"
         android:layout_marginTop="16dp"
         android:text="ポッチャマ！"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button_push"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="148dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="315dp"
-        android:text="PUSH"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button_tap"
+        android:id="@+id/button_select"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="148dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginTop="315dp"
-        android:text="TAP"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="48dp"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="26dp"
+        android:text="Select Image"
+        app:layout_constraintEnd_toStartOf="@+id/button_twitter"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/image_pocchama" />
+
+    <Button
+        android:id="@+id/button_twitter"
+        android:layout_width="169dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="26dp"
+        android:text="Posting on twitter"
+        android:background="#2ECCFA"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/image_pocchama" />
 
     <ImageView
         android:id="@+id/image_pocchama"
