--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -9,36 +9,31 @@
     <!-- ツイート本文 -->
 
     <!-- 画像表示用のレイアウトをスクロールできるようにする -->
-    <HorizontalScrollView
-        android:id="@+id/layout_media_scroll"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="513dp"
-        android:layout_alignStart="@+id/resultText"
-        android:layout_below="@+id/resultText"
-        android:layout_marginTop="20dp"
-        android:scrollbars="none"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <!-- 画像表示用レイアウト -->
-        <LinearLayout
-            android:id="@+id/layout_media"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" />
+        <TextView
+            android:id="@+id/resultText"
+            android:layout_width="match_parent"
+            android:layout_height="76dp"
+            android:text="" />
 
-    </HorizontalScrollView>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/resultText"
-        android:layout_width="339dp"
-        android:layout_height="77dp"
-        android:layout_marginTop="30dp"
-        android:text=""
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <LinearLayout
+                android:id="@+id/tweet_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                tools:layout_editor_absoluteY="104dp">
+
+            </LinearLayout>
+        </ScrollView>
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
